[metadata]
author = Tyson Smith
author_email = twsmith@mozilla.com
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing
description = A Python module that aids in the automation of Firefox at the process level
keywords = automation firefox fuzz fuzzing security test testing
license = MPL 2.0
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Mozilla Fuzzing Team
maintainer_email = fuzzing@mozilla.com
name = ffpuppet
url = https://github.com/MozillaSecurity/ffpuppet

[options]
include_package_data = True
install_requires =
    black >= 21.12b0
    mypy==0.920
    psutil >= 4.4.0
    pytest >= 6.2.5
    types-psutil >= 5.8.15
    types-setuptools >= 57.4.4
    xvfbwrapper >= 0.2.9; sys_platform == "linux" or sys_platform == "linux2"
packages =
    ffpuppet
python_requires = >=3.7
zip_safe = False

[options.entry_points]
console_scripts =
    ffpuppet = ffpuppet.main:main

[options.extras_require]
dev =
    pre-commit
    tox
